fix for different port used in actual demo (I dropped changing port for simplicity sake)

--- a/web/default.conf
+++ b/web/default.conf
@@ -10,9 +10,9 @@ server {
         index  index.html index.htm;
     }
 
-    # /api proxy to backend at http://catalog-api:80
+    # /api proxy to backend at http://api:8080
     location /api/ {
-        proxy_pass http://catalog-api:80;
+        proxy_pass http://api:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
