--- a/cloud/postgres.yml
+++ b/cloud/postgres.yml
@@ -16,25 +16,26 @@ spec:
         app: postgres
     spec:
       containers:
-        - name: metrics
-          # https://github.com/prometheus-community/postgres_exporter
-          image: quay.io/prometheuscommunity/postgres-exporter
-          env:
-            - name: DATA_SOURCE_URI
-              value: "localhost:5432/postgres?sslmode=disable"
-            - name: DATA_SOURCE_USER
-              value: "library_user"
-            - name: DATA_SOURCE_PASS
-              value: "library_pass"
-          ports:
-            - containerPort: 9187
-          resources:
-            limits:
-              cpu: 200m
-              memory: 128Mi
-            requests:
-              cpu: 50m
-              memory: 64Mi
+
+        # - name: metrics
+        #   # https://github.com/prometheus-community/postgres_exporter
+        #   image: quay.io/prometheuscommunity/postgres-exporter
+        #   env:
+        #     - name: DATA_SOURCE_URI
+        #       value: "localhost:5432/postgres?sslmode=disable"
+        #     - name: DATA_SOURCE_USER
+        #       value: "library_user"
+        #     - name: DATA_SOURCE_PASS
+        #       value: "library_pass"
+        #   ports:
+        #     - containerPort: 9187
+        #   resources:
+        #     limits:
+        #       cpu: 200m
+        #       memory: 128Mi
+        #     requests:
+        #       cpu: 50m
+        #       memory: 64Mi
 
         - name: postgres
           image: postgres:17-alpine
