--- a/cloud/ingress.yml
+++ b/cloud/ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: library-ingress
+  namespace: library1
 spec:
   rules:
     - http:
